--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,6 +6,24 @@
     padding: 0;
     border: 0;
 }
+h2, h3 {
+    margin-bottom: 10px;
+}
+
+p {
+    margin-bottom: 10px;
+}
+
+.right-side ul {
+    margin-top: 20px;
+    margin-bottom: 40px;
+    list-style-type: disc;
+}
+
+li {
+    margin-bottom: 5px;
+}
+
 
 /* Body */
 body {
@@ -29,12 +47,6 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     list-style-type: none;
-}
-
-/* Li-styling */
-.navbar li {
-    margin-bottom: 10px;
-    margin-top: 10px;
 }
 
 /* styling on links */
@@ -85,8 +97,6 @@ body {
 
 /* Container for infopages */
 .container {
-    display: flex;
-    flex-wrap: wrap;
     width: 90%;
     max-width: 920px;
     min-height: 500px;
@@ -186,6 +196,26 @@ body {
 
 .modal {
     visibility: hidden;
+    position:fixed;
+    top: 50%;
+    left: 50%;
+    background: white;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+    max-width: 450px;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+}
+
+.easter-modal {
     position:fixed;
     top: 50%;
     left: 50%;
